--- a/client/back-office/views/prenotations.html
+++ b/client/back-office/views/prenotations.html
@@ -56,15 +56,29 @@
 
       const filterStartEndTime = (time, end) => {
         let hours = +time.substring(11, 13) + 1 + +end;
+        if( hours === 0) return "12am"
+        if( hours === 12) return "12pm"
         time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
         return time;
       };
 
       const formatTime = (time) => {
         let hours = +time.substring(11, 13) + 1;
-        time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
+        if( hours === 0) time += "12am"
+        else {
+          if( hours === 12) time += "12pm"
+          else {
+            time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
+          }
+        }
         time += " - ";
-        time += hours + 1 > 12 ? ((hours + 1) % 12) + "pm" : hours + 1 + "am";
+        if( (hours+1) === 0) time += "12am"
+        else {
+          if( (hours+1) === 12) time += "12pm"
+          else {
+            time += hours + 1 > 12 ? ((hours + 1) % 12) + "pm" : hours + 1 + "am";
+          }
+        }
         return time;
       };
 
