created button to new company

--- a/client/back-office/views/companies.html
+++ b/client/back-office/views/companies.html
@@ -1077,6 +1077,9 @@
             Click on something followed by
             <i class="fa fa-copy"></i> to copy it!
           </div>
+          <button class="btn bg-danger mt-4 p-1 px-4 m-2 hover:opacity-80 text-white font-bold rounded-lg self-center">
+            CREATE NEW COMPANY
+          </button>
           <div class="flex flex-row mt-2">
             <button
               id="showBtn"
@@ -1324,7 +1327,8 @@
             <div
               id="totCompanies"
               class="flex flex-col flex primary font-semibold my-2"
-            ></div>
+            >
+            </div>            
             <div id="companyList" class="flex flex-col flex-1"></div>
           </div>
         </div>
