--- a/client/back-office/views/prenotations.html
+++ b/client/back-office/views/prenotations.html
@@ -40,18 +40,31 @@
             : "0" + d.getDate().toString())
         );
       };
-      let today = getDateString(new Date())
-      let endPrenotation = getDateString((new Date()).setFullYear((new Date()).getFullYear() + 1))
-      
+      let today = getDateString(new Date());
+      let endPrenotation = getDateString(
+        new Date().setFullYear(new Date().getFullYear() + 1)
+      );
+
+      const savePts = (index) => {
+        if ($("#possiblePlaces" + index).val() != "") {
+          pts[index].place = $("#possiblePlaces" + index).val();
+        }
+        if ($("#newDate" + index).val() !== "" && $("#newStart" + index).val() !== "") {
+          pts[index].start = new Date($("#newDate" + index).val() + " " +chooseTime($("#newStart" + index).val()));
+          //console.log(pts[index])
+        }
+        sendUpdatePt(index)
+      };
       //TODO ancora non c'è la struttura data per la prenoatazione da aggiornare
       //creare savePrenotation() che aggiorna list, in modo da accedere tramite index
       //controllare come si passa orario
       const sendUpdatePt = async (index) => {
-        let url = "http://localhost:5000/api/prenotation/update/"+ pts[index]._id;
+        let url =
+          "http://localhost:5000/api/prenotation/update/";
         var ret = await fetch(url, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data[0]),
+          body: JSON.stringify(pts[index]),
           credentials: "include",
         });
         ret = await ret.json();
@@ -65,11 +78,10 @@
           method: "GET",
           credentials: "include",
         });
-        let tmp = await ret.json()
+        let tmp = await ret.json();
         companies.push(tmp[0]);
         fillDaysChange(index);
-        setWorkingCities(index)
-
+        setWorkingCities(index);
       };
 
       const getPts = async (id) => {
@@ -110,9 +122,9 @@
 
       const formatTime = (time) => {
         let hours = +time.substring(11, 13) + 1;
-        if (hours === 0) time += "12am";
+        if (hours === 0) time = "12am";
         else {
-          if (hours === 12) time += "12pm";
+          if (hours === 12) time = "12pm";
           else {
             time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
           }
@@ -129,37 +141,92 @@
         return time;
       };
       const fillDaysChange = (index) => {
-        let list = []
-        if(!list.includes(companies[index].cities.monday)){
-          list.push(companies[index].cities.monday)
-          $("#possibleCities" + index).append(`
-          <option value="` + companies[index].cities.monday +`">` + companies[index].cities.monday + `</option>
-          `)
+        let list = [];
+        if (companies[index]?.online !== undefined)
+          if (companies[index]?.online === true) {
+            $("#possiblePlaces" + index).append(
+              `
+            <option value="online` +
+                index +
+                `">online</option>
+            `
+            );
+          }
+        if (!list.includes(companies[index]?.cities.monday)) {
+          list.push(companies[index]?.cities.monday);
+          $("#possiblePlaces" + index).append(
+            `
+          <option value="` +
+              companies[index]?.cities.monday +
+              `">` +
+              companies[index]?.cities.monday +
+              `</option>
+          `
+          );
         }
-        if(!list.includes(companies[index].cities.tuesday)){
-          list.push(companies[index].cities.tuesday)
-          $("#possibleCities" + index).append(`
-          <option value="` + companies[index].cities.tuesday +`">` + companies[index].cities.tuesday + `</option>
-          `)
+        if (!list.includes(companies[index]?.cities.tuesday)) {
+          list.push(companies[index]?.cities.tuesday);
+          $("#possiblePlaces" + index).append(
+            `
+          <option value="` +
+              companies[index]?.cities.tuesday +
+              `">` +
+              companies[index]?.cities.tuesday +
+              `</option>
+          `
+          );
         }
-        if(!list.includes(companies[index].cities.wednesday)){
-          list.push(companies[index].cities.wednesday)
-          $("#possibleCities" + index).append(`
-          <option value="` + companies[index].cities.wednesday +`">` + companies[index].cities.wednesday + `</option>
-          `)
+        if (!list.includes(companies[index]?.cities.wednesday)) {
+          list.push(companies[index]?.cities.wednesday);
+          $("#possiblePlaces" + index).append(
+            `
+          <option value="` +
+              companies[index]?.cities.wednesday +
+              `">` +
+              companies[index]?.cities.wednesday +
+              `</option>
+          `
+          );
         }
-        if(!list.includes(companies[index].cities.thursday)){
-          list.push(companies[index].cities.thursday)
-          $("#possibleCities" + index).append(`
-          <option value="` + companies[index].cities.thursday +`">` + companies[index].cities.thursday + `</option>
-          `)
+        if (!list.includes(companies[index]?.cities.thursday)) {
+          list.push(companies[index]?.cities.thursday);
+          $("#possiblePlaces" + index).append(
+            `
+          <option value="` +
+              companies[index]?.cities.thursday +
+              `">` +
+              companies[index]?.cities.thursday +
+              `</option>
+          `
+          );
         }
-        if(!list.includes(companies[index].cities.friday)){
-          list.push(companies[index].cities.friday)
-          $("#possibleCities" + index).append(`
-          <option value="` + companies[index].cities.friday +`">` + companies[index].cities.friday + `</option>
-          `)
+        if (!list.includes(companies[index]?.cities.friday)) {
+          list.push(companies[index]?.cities.friday);
+          $("#possiblePlaces" + index).append(
+            `
+          <option value="` +
+              companies[index]?.cities.friday +
+              `">` +
+              companies[index]?.cities.friday +
+              `</option>
+          `
+          );
         }
+      };
+
+      const chooseTime = (time) => {
+        let len = time.length;
+        if (len < 3) {
+          alert("Incorrect time input");
+          return "";
+        }
+        let moment = time[len - 2] + time[len - 1];
+        let hours = "";
+
+        hours += time[0] + (len > 3 ? time[1] : "");
+        time = moment === "pm" && hours !== "12" ? +hours + 12 : +hours;
+        time += ":00";
+        return time;
       };
       const filterList = () => {
         let reqPrenotation = $("#filterPrenotationId").val();
@@ -236,18 +303,30 @@
           $("#totPrenotations").html("TOTAL RESULTS: " + totPrenotations);
           totPrenotations = 0;
         });
-      }
+      };
       const setWorkingCities = (index) => {
-        $("#workingCities" + index).append(`
+        $("#workingCities" + index).append(
+          `
         <div class="flex flex-col text-base ml-3">
-          <div><span class="font-bold">Monday: </span>` + companies[index].cities.monday + `</div>
-          <div><span class="font-bold">Tuesday: </span>` + companies[index].cities.tuesday + `</div>
-          <div><span class="font-bold">Wednesday: </span>` + companies[index].cities.wednesday + `</div>
-          <div><span class="font-bold">Thursday: </span>` + companies[index].cities.thursday + `</div>
-          <div><span class="font-bold">Friday: </span>` + companies[index].cities.friday + `</div>
+          <div><span class="font-bold">Monday: </span>` +
+            companies[index]?.cities.monday +
+            `</div>
+          <div><span class="font-bold">Tuesday: </span>` +
+            companies[index]?.cities.tuesday +
+            `</div>
+          <div><span class="font-bold">Wednesday: </span>` +
+            companies[index]?.cities.wednesday +
+            `</div>
+          <div><span class="font-bold">Thursday: </span>` +
+            companies[index]?.cities.thursday +
+            `</div>
+          <div><span class="font-bold">Friday: </span>` +
+            companies[index]?.cities.friday +
+            `</div>
           </div>
-        `)
-      } 
+        `
+        );
+      };
 
       const makeItemPrenotation = (index, id, place, start, user, company) => {
         return (
@@ -265,14 +344,22 @@
           `
             <i class="fa fa-copy"></i></button>
                 </div>
-                <div id="workingCities` + index+ `" class="hidden toshow` + index + `"><span class="font-bold">Working cities:</span>
+                <div id="workingCities` +
+          index +
+          `" class="hidden toshow` +
+          index +
+          `"><span class="font-bold">Working cities:</span>
                 </div>
-                <div><span class="font-semibold">City: </span>` +
+                <div><span class="font-semibold">Place: </span>` +
           place +
           `
           <select
-              id="possibleCities` + index+ `"
-              name="possibleCities` + index+ `"
+              id="possiblePlaces` +
+          index +
+          `"
+              name="possiblePlaces` +
+          index +
+          `"
               type="text"
               class="toshow` +
           index +
@@ -282,11 +369,21 @@
             </select>
                 </div>
                 <div>
-                  <label class="font-semibold" for="newDate">Date:</label>
-
-                  <input type="date" id="newDate" class="toshow` +
+                  <label class="font-semibold" for="newDate` +
           index +
-          ` hidden change px-1 rounded shadow-sm border-primary my-1 ml-2 bg-transparent" name="trip-start" value="` + start.substring(0, 10) + `" min="` + today +`" max="` + endPrenotation + `">                   
+          `">Date:</label>
+
+                  <input type="date" id="newDate` +
+          index +
+          `" class="toshow` +
+          index +
+          ` hidden change px-1 rounded shadow-sm border-primary my-1 ml-2 bg-transparent" name="trip-start" value="` +
+          start.substring(0, 10) +
+          `" min="` +
+          today +
+          `" max="` +
+          endPrenotation +
+          `">                   
                   <span class=tohidden` +
           index +
           `>` +
@@ -303,7 +400,9 @@
           ` hidden"><span class="font-semibold">Start at: </span>
             <input
                 type="text"
-                name="newStart"
+                name="newStart` +
+          index +
+          `"
                 id="newStart` +
           index +
           `"
@@ -347,7 +446,9 @@
           index +
           `').removeClass('hidden'); $('.toshow` +
           index +
-          `').addClass('hidden')}">
+          `').addClass('hidden')}; savePts('` +
+          index +
+          `')">
               SAVE
               </button>
               <button class="toshow` +
@@ -385,9 +486,8 @@
                 item.company
               );
               totPrenotations = index + 1;
-              getCompany(item.company, index)
+              getCompany(item.company, index);
             });
-            //console.log(companies)
           }
           $("#ptsList").html(tmp);
           $("#totPrenotations").html("TOTAL RESULTS: " + totPrenotations);
@@ -430,7 +530,6 @@
         $("#filterCity").val("");
         filterList();
       };
-
     </script>
   </head>
   <body>
